Add assets directory for images
Added a directory to store any assets that will be required on the webpages.

--- a/recipes/deep-dish.html
+++ b/recipes/deep-dish.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Deep Dish Pizza recipe</h1>
+        <img src="../assets/deep-dish-slice.jpg" alt="Picture of a slice of Deep Dish Pizza" width="25%">
     </body>
 
 </html>
