Add Description and ingredients list
Added the basic layout of ingredients and some <br> to better organize the webpage.

--- a/recipes/deep-dish.html
+++ b/recipes/deep-dish.html
@@ -8,6 +8,26 @@
     <body>
         <h1>Deep Dish Pizza recipe</h1>
         <img src="../assets/deep-dish-slice.jpg" alt="Picture of a slice of Deep Dish Pizza" width="25%">
+        <h2>We promise that your pizza will look this good too.</h2>
+        <h3>Description</h3>
+        <p>Here’s how to make authentic-tasting Chicago deep dish pizza. Complete with the buttery crust, slightly sweet tomato sauce, and a thick layer of cheese. <br>
+
+        I’ve only had the pleasure of having real, authentic Chicago-style pizza a few times. And those few times have been enough to convince me that Chicago-style pizza is incomparably good. Better than good. <br>
+        
+        Here’s how to make authentic-tasting Chicago deep dish pizza. Complete with the buttery crust, slightly sweet tomato sauce, and a thick layer of cheese. This recipe makes two deep dish 9-inch pizzas. Make them both if you have a family of 4-5 or are having friends over. If your family is smaller, freeze half of the dough per the make-ahead/freezing instructions in the recipe notes. <br></p>
+        <h3>Ingredients</h3>    
+        <ul>
+            <li>3 and 1/4 cups (406g) all-purpose flour (spooned & leveled)
+            </li>
+            <li>1/2 cup (60g) yellow cornmeal</li>
+            <li>1 and 1/4 teaspoons salt</li>
+            <li>1 Tablespoon (12g) granulated sugar</li>
+            <li>2 and 1/4 teaspoons (7g) Platinum Yeast from Red Star instant yeast (1 standard packet)*</li>
+            <li>1 and 1/4 cups (300ml) slightly warm water</li>
+            <li>1/2 cup (8 Tbsp; 113g) unsalted butter, divided (1/4 cup melted, 1/4 cup softened to room temperature)</li>
+            <li>olive oil for coating</li>
+
+        </ul>
     </body>
 
 </html>
