--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device.width, initial-scale-1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device.width, initial-scale-1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/deep-dish.html">Deep dish pizza recipe.</a>
-</body>
-
+    <ul>
+        <li><a href="recipes/deep-dish.html">Deep dish pizza recipe.</a></li>
+        <li><a href="recipes/carbonara.html"></a>Carbonara Sphaguetti.</li>
+    </ul>
+  </body>
 </html>
