--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin recipes</h1>
     <ul>
         <li><a href="recipes/deep-dish.html">Deep dish pizza recipe.</a></li>
-        <li><a href="recipes/carbonara.html"></a>Carbonara Sphaguetti.</li>
+        <li><a href="recipes/carbonara.html">Carbonara Sphaguetti.</a></li>
     </ul>
   </body>
 </html>
